Bug 489700 - Focus ring is cut off for XUL dropdown in Clear Recent History dialog. r=johnath
UltraBlame original commit: a13202e6b62f6c1296702905f6e7257a48bc1e4f

--- a/browser/themes/gnomestripe/browser/preferences/preferences.css
+++ b/browser/themes/gnomestripe/browser/preferences/preferences.css
@@ -157,18 +157,6 @@ radio[pane=paneAdvanced] {
 
 
 
-#SanitizeDurationBox {
-  padding-bottom: 10px;
-}
-
-#sanitizeDurationChoice {
-  margin: 0; 
-}
-
-#sanitizeDurationLabel {
-  -moz-margin-start: 3px;
-}
-
 #SanitizeDialogPane > groupbox {
   margin-top: 0;
 }
