--- a/browser/themes/pinstripe/browser/preferences/preferences.css
+++ b/browser/themes/pinstripe/browser/preferences/preferences.css
@@ -276,18 +276,6 @@ caption {
 
 
 
-#SanitizeDurationBox {
-  padding-bottom: 10px;
-}
-
-#sanitizeDurationChoice {
-  margin: 0; 
-}
-
-#sanitizeDurationLabel {
-  -moz-margin-start: 3px;
-}
-
 #SanitizeDialogPane > groupbox {
   margin-top: 0;
 }
