--- a/browser/themes/pinstripe/browser/sanitizeDialog.css
+++ b/browser/themes/pinstripe/browser/sanitizeDialog.css
@@ -1,4 +1,10 @@
 
+#sanitizeDurationLabel {
+  -moz-margin-start: 1px;
+}
+
+
+
 
 
 #sanitizeDurationSuffixLabel[value=""] {
@@ -32,9 +38,8 @@
 }
 
 #sanitizeEverythingWarningDescBox {
-  padding: 0;
+  padding: 0 16px;
   margin: 0;
-  padding-left: 16px;
 }
 
 
@@ -43,8 +48,8 @@
   padding: 0;
   margin-top: 6px;
   margin-bottom: 6px;
-  margin-left: -2px;
-  margin-right: 0;
+  -moz-margin-start: -2px;
+  -moz-margin-end: 0;
 }
 
 .expander-up,
@@ -74,16 +79,15 @@
 
 
 #itemList {
-  margin-left: 0;
-  margin-right: 0;
+  -moz-margin-start: 0;
+  -moz-margin-end: 0;
 }
-
 
 
 
 .prefWindow-dlgbuttons {
-  margin-right: 0;
+  -moz-margin-end: 0;
 }
 .dialog-button[dlgtype="accept"] {
-  margin-right: 0;
+  -moz-margin-end: 0;
 }
